--- a/app/scss/layout/layout.scss
+++ b/app/scss/layout/layout.scss
@@ -1,6 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
 body, html {
     width: 100%;
     height: 100%;
+}
+
+body {
+    font-size: 16px;
+    line-height: 1.42;
+    -webkit-font-smoothing: antialiased; 
 }
 
 .container {
@@ -27,6 +37,11 @@ footer {
     min-width: $container-width + 20px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    font-weight: normal;
+}
+
 ul {
     padding: 0;
     margin: 0;
@@ -34,4 +49,9 @@ ul {
 
 li {
     list-style: none;
+}
+
+p {
+    padding: 0;
+    margin: 0;
 }
